Updated the main file.

--- a/Topic_Modelling_approaches.ipynb
+++ b/Topic_Modelling_approaches.ipynb
@@ -13,11 +13,24 @@
    "source": [
     "Topic Modeling is an unsupervised machine learning algorithm used to identify topics in a given set of documents. In this notebook, we will cover two widely used techniques used in Topic Modeling:\n",
     "\n",
-    "1)Latent Dirichlet Allocation.\n",
-    "\n",
-    "2)Non-negative Matrix Factorization.\n",
+    "1. Latent Dirichlet Allocation.\n",
+    "2. Non-negative Matrix Factorization.\n",
     "\n",
     "We will also look at the effects of passing different features to these algorithms-namely Term frequencies only and then Inverse Document Frequencies."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loading libraries and reading the data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will load the basic libraries and have a sneak peak at the data."
    ]
   },
   {
@@ -291,6 +304,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Preprocessing the data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### We need to preprocess data before performing topic modeling.We will perform the following steps a part of preprocessing:\n",
+    "    1. Removing NaN(null) values.\n",
+    "    2. Tokenizing the text.\n",
+    "    3. Removing stop-words.\n",
+    "    4. Lemmatizing the words."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -430,6 +461,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Vectorization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the next step ,we perform vectorization of the clean text using CountVectorizer."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -473,6 +518,20 @@
     "# http://scikit-learn.org/stable/modules/generated/sklearn.decomposition.LatentDirichletAllocation.html\n",
     "lda = LatentDirichletAllocation(n_topics=no_topics, max_iter=5, learning_method='online', learning_offset=50.,random_state=0)\n",
     "lda_model = lda.fit(term_freq)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Implementation of LDA using Term Frequency."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, we run the LDA model on the resultant vectors from the previous step and display the top words of each topic."
    ]
   },
   {
@@ -558,6 +617,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualizing the Model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
@@ -630,6 +696,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Implementation of LDA using Inverse Document Frequency."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Instead of using term frequency, let's try using Inverse Document Frequency(IDF) for performing LDA."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
@@ -697,6 +777,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualizing the Model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
@@ -758,6 +845,20 @@
    "source": [
     "data=pyLDAvis.sklearn.prepare(lda_model, idf, vec)\n",
     "pyLDAvis.display(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Implementation of NMF using Term Frequency."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, let's try implementing Non-Negative Matrix Factorization using Term Frequency as features."
    ]
   },
   {
@@ -826,6 +927,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualizing the Model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
@@ -887,6 +995,20 @@
    "source": [
     "data=pyLDAvis.sklearn.prepare(nmf_model, term_freq, vec)\n",
     "pyLDAvis.display(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Implementation of NMF using Inverse-Document Frequency."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, let's try implementing Non-negative Matrix Factorization using Inverse-Document Frequency."
    ]
   },
   {
@@ -954,6 +1076,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualizing the Model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
@@ -1016,13 +1145,6 @@
     "data=pyLDAvis.sklearn.prepare(nmf_model, idf, vec)\n",
     "pyLDAvis.display(data)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
