Updated main file

--- a/Topic_Modelling_approaches.ipynb
+++ b/Topic_Modelling_approaches.ipynb
@@ -490,9 +490,6 @@
     "    #training. fit_transform returns a Document-term matrix.\n",
     "    tf = tf_vectorizer.fit_transform(text)   #Array mapping from feature integer indices to feature name\n",
     "    tf_feature_names = tf_vectorizer.get_feature_names()\n",
-    "    \n",
-    "    #df = pd.DataFrame.from_records(tf.toarray().transpose(), index = tf_feature_names)\n",
-    "    #df.columns = xColNames\n",
     "    return tf_vectorizer,tf, tf_feature_names\n"
    ]
   },
@@ -545,12 +542,7 @@
     "        print (\"Topic %d:\" % (topic_idx))\n",
     "        print (\" \".join([feature_names[i]\n",
     "                        for i in topic.argsort()[:-no_top_words - 1:-1]]))\n",
-    "        top_doc_indices = np.argsort( W[:,topic_idx] )[::-1][0:no_top_documents]\n",
-    "        '''\n",
-    "        for doc_index in top_doc_indices:\n",
-    "            print(\"Documents\")\n",
-    "            print (documents[doc_index])\n",
-    "           ''' "
+    "        top_doc_indices = np.argsort( W[:,topic_idx] )[::-1][0:no_top_documents] "
    ]
   },
   {
@@ -688,8 +680,6 @@
     "warnings.filterwarnings(\"ignore\")\n",
     "import pyLDAvis.sklearn\n",
     "pyLDAvis.enable_notebook()\n",
-    "# load the model from disk\n",
-    "#loaded_model = pickle.load(open(filename, 'rb'))\n",
     "\n",
     "data=pyLDAvis.sklearn.prepare(lda_model, term_freq, vec)\n",
     "pyLDAvis.display(data)"
